aws/my-eks/buddy_master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buddy-master
  namespace: buddy-master
spec:
  replicas: 2
  selector:
    matchLabels:
      app: buddy-master
  template:
    metadata:
      labels:
        app: buddy-master
    spec:
      containers:
      - name: buddy-master
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: buddy-master-service
  namespace: buddy-master
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: buddy-master
  type: ClusterIP
