aws/my-eks/7-buddy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buddy-master-ingress
  namespace: buddy-master
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-2:654654369278:certificate/cfc29844-8499-42fc-bad6-30c0e0b1142e"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
  - host: "eksbeta.api.yourmentors.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buddy-master-service
            port:
              number: 80
  tls:
  - hosts:
    - "eksbeta.api.yourmentors.io"
    secretName: buddy-master-secret
