aws/my-eks/nginx_ssl_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-app
  template:
    metadata:
      labels:
        app: apache-app
    spec:
      containers:
      - name: apache
        image: httpd:latest 
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache-app-service 
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache-app  
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-app-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:699475925713:certificate/d4dafacf-0e17-43a1-a7fe-300c26bf7297"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
  - host: "api.cloudopsschool.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app-service
            port:
              number: 80
  - host: "apache.cloudopsschool.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-app-service
            port:
              number: 80
  tls:
  - hosts:
    - "api.cloudopsschool.com"
    - "apache.cloudopsschool.com"
    secretName: tls-dummy-secret
